--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Password Generator</title>
   </head>
-  <body>
+  <body style="margin: 0px">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
